<resources>
    <string name="app_name">CineFront</string>
    <string name="txtBtnLogin">Ingresar</string>
    <string name="txtHintEmail">Ingrese su correo electrónico:</string>
    <string name="txtHintPassword">Ingrese su contraseña:</string>
    <string name="descImageLogo">Cineplanet</string>
    <string name="tvmenu">MENU PRINCIPAL</string>
    <string name="btnPeliculas">PELICULAS EN CARTELERA</string>
    <string name="btnLocales">LOCALES DISPONIBLES</string>
    <string name="btnSalir">CERRAR SESIÓN</string>
    <string name="btnMetodoPago">COMPRAR BOLETO</string>
    <string name="cancel">Cancelar</string>
    <string name="btnComidas">Comidas</string>
    <string name="CbVisa">Visa</string>
    <string name="CbPayPal">PayPal</string>
    <string name="CbMastercard">MasterCard</string>
    <string name="CbAmericanExpress">American Express</string>
    <string name="CbBCP">BCP</string>
    <string name="CbScotiabank">Scotiabank</string>
    <string name="valloccine">Actuales Locales de Cine</string>
    <string name="ValListComic">Listado de Snacks</string>
</resources>